# epp-sla-anomaly-detection-multimodel

./: .dockerignore  .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: docker-build-push.yml  sagemaker-deploy.yaml
aws/scripts/: README.md  cli.py
aws/terraform/: README.md  backend.tf  data.tf  main.tf  outputs.tf  providers.tf  variables.tf
aws/terraform/bootstrap/: main.tf  terraform.tfstate  terraform.tfstate.backup
aws/terraform/lambda_src/: lambda_handler.py
aws/terraform/lamda/: lambda_handler.py
configs/: main.config.json
configs/v1/: data-config.json
docker/: app.Dockerfile  dashboard.Dockerfile  model.Dockerfile  serve  ui.Dockerfile
infra/lambda/sagemaker_relay/: handler.py
models/v1/isolationforest/: model_bundle.pkl
scripts/: aws_demo_stack_lib.py  deploy_sagemaker.py
src/api/: app.py  main.py  model_registry.py  sagemake_inference.py
src/common/: config.py  config_loader.py  data_generator.py  feature_engineering.py  mlflow_utils.py  model_registry.py  model_utils.py  path_utils.py  s3_utils.py
src/darts_ad/: inference.py  inference_engine.py  train.py
src/dashboard/: app.py
src/isolationforest_ad/: inference.py  inference_engine.py  local_utils.py  train.py  validator.py
src/pipeline/: __init__.py  run_pipeline_isolationforest.py  run_pipeline_xgboost.py
src/shared/: __init__.py  data_dictionary.py  demo_data.py  generator_config.py
src/xgboost_ad/: inference.py  inference_engine.py  local_utils.py  threshold_generator.py  train.py  validator.py
terraform/: README.md  main.tf  outputs.tf  variables.tf
(+15 files in other folders)
